--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'org.json:json:20211205'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0'
     implementation 'mysql:mysql-connector-java:8.0.28'
-    implementation 'com.discord4j:discord4j-core:3.2.3'
+    implementation 'com.discord4j:discord4j-core:3.2.3-SNAPSHOT'
     implementation "ch.qos.logback:logback-classic:1.2.10"
     implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
     implementation "net.sourceforge.tess4j:tess4j:5.2.0"
