--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,12 @@ allprojects {
 }
 
 dependencies {
-    implementation 'org.json:json:20211205'
+    implementation 'org.json:json:20231013'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.0.0'
     implementation 'mysql:mysql-connector-java:8.0.28'
-    implementation 'com.discord4j:discord4j-core:3.2.3-SNAPSHOT'
-    implementation "ch.qos.logback:logback-classic:1.2.10"
-    implementation 'com.github.walkyst:lavaplayer-fork:1.3.97'
+    implementation 'com.discord4j:discord4j-core:3.3.0-RC1'
+    implementation 'ch.qos.logback:logback-classic:1.5.5'
+    implementation 'com.github.walkyst:lavaplayer-fork:1.4.3'
     implementation "net.sourceforge.tess4j:tess4j:5.2.0"
     implementation 'com.github.marcoacierno:pastebin-java-api:0.2.1'
     implementation "com.github.jai-imageio:jai-imageio-core:1.4.0"
