--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.github.aikaterna:lavaplayer-natives:original-SNAPSHOT'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
     implementation group: 'com.rometools', name: 'rome', version: '2.1.0'
+    implementation 'io.github.husnjak:igdb-api-jvm:1.3.1'
 }
 
 mainClassName = 'com.lordnoisy.hoobabot.Main'
