--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
     implementation group: 'com.rometools', name: 'rome', version: '2.1.0'
     implementation 'io.github.husnjak:igdb-api-jvm:1.3.1'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.19.1'
 }
 
 mainClassName = 'com.lordnoisy.hoobabot.Main'
